src/test/ui/parser/issue-10636-2.stderr
error: expected list separator `,`, found `;`
  --> $DIR/issue-10636-2.rs:5:25
   |
LL |     option.map(|some| 42;
   |               -         ^ help: use the expected separator: `,`
   |               |
   |               while parsing the list starting here

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `)`
  --> $DIR/issue-10636-2.rs:8:1
   |
LL |     option.map(|some| 42;
   |                          - expected one of `.`, `;`, `?`, `}`, or an operator
...
LL | }
   | ^ unexpected token

error: mismatched closing delimiter: `}`
  --> $DIR/issue-10636-2.rs:8:1
   |
LL | pub fn trace_option(option: Option<isize>) {
   |                                            - closing delimiter possibly meant for this
LL |     option.map(|some| 42;
   |               - unclosed delimiter
...
LL | }
   | ^ mismatched closing delimiter

error: aborting due to 3 previous errors

